[package]
name = "auction-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha256 = "1.1.1"
serde = "1.0.163"
sha1 = "0.10.5"
bincode = "1.3.3"

[dependencies.postcard]
version = "1.0.2"
features = ["alloc"]