[package]
name = "auction-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../utils" }
sha256 = "1.1.1"
serde = "1.0.163"
sha1 = "0.10.5"
bincode = "1.3.3"
rand = "0.8.5"
time = { version = "0.3.20", features = ["serde-human-readable"] }
anyhow = "1.0.69"
log = "0.4.17"
rcgen = "0.10.0"
ed25519-dalek-fiat = { version = "0.1.0", features = ["serde"] }
thiserror = "1.0.39"
hex = "0.4.3"


[dependencies.postcard]
version = "1.0.2"
features = ["alloc"]

[dev-dependencies]
reedline-repl-rs = { version = "1.0.6", features = ["async"] }
simple_logger = "4.1.0"


[dependencies.tokio]
version = "1.26.0"
features = ["macros","net","sync","time"]

[dev-dependencies.tokio]
version = "1.26.0"
features = ["rt", "rt-multi-thread"]