[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
auction-common = { path = "../auction-common"}
utils = { path = "../utils"}
serde = "1.0.163"
sha1 = "0.10.5"
bincode = "1.3.3"
serde_json = "1.0.96"
hex = "0.4.3"
rcgen = "0.10.0"
compare = "0.1.0"
enum_dispatch = "0.3.11"