[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
auction-common = { path = "../auction-common"}
utils = { path = "../utils"}
serde = "1.0.163"
serde_derive = "1.0.154"
serde_json = "1.0.94"
sha1_smol = "1.0.0"
bincode = "1.3.3"
hex = "0.4.3"
rand = "0.8.5"
rcgen = "0.10.0"
ed25519-dalek-fiat = { version = "0.1.0", features = ["serde"] }
