[package]
name = "dht"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
seq-macro = "0.3.2"
serde = "1.0.154"
serde_derive = "1.0.154"
serde_json = "1.0.94"
rand = "0.8.5"
thiserror = "1.0.39"

[dependencies.tokio]
version = "1.26.0"
features = ["rt", "macros"]