[package]
name = "dht"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
seq-macro = "0.3.2"
serde = "1.0.154"
serde_derive = "1.0.154"
serde_json = "1.0.94"
rand = "0.8.5"
thiserror = "1.0.39"
anyhow = "1.0.69"
time = { version = "0.3.20", features = ["serde-human-readable"] }
itertools = "0.10.5"
hex = "0.4.3"
log = "0.4.17"
ed25519-dalek-fiat = { version = "0.1.0", features = ["serde"] }
sha1_smol = "1.0.0"
moka = { version= "0.11.0", features = ["future"] }

[dependencies.tokio]
version = "1.26.0"
features = ["macros","net","sync","time"]

[dev-dependencies]
clap = { version = "4.1.14", features = ["derive"] }
reedline-repl-rs = { version = "1.0.6", features = ["async"] }
simple_logger = "4.1.0"

[dev-dependencies.tokio]
version = "1.26.0"
features = ["rt", "rt-multi-thread"]